--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/style_index.css">
+    <link href='https://fonts.googleapis.com/css?family=Lalezar' rel='stylesheet'>
 </head>
 <body>
     <div class="header">
         <div class="container">
             <div class="esquerda_header">
-                <img src="../img/download.png" class="logo_navbar">
+                <img src="../img/download.png" class="logo">
             </div>
             <div class="direita_header">
                 <div class="conta">
@@ -20,10 +21,10 @@
                 <hr>
                 <div class="links_navbar">
                     <ul class="navbar">
-                        <li><a href="">Produto</a></li>
-                        <li><a href="">Solução</a></li>
-                        <li><a href="">Quem somos</a></li>
-                        <li><a href="">Contato</a></li>
+                        <li><div class="linka"><a href="">Produto</a></div></li>
+                        <li><div class="linka"><a href="">Solução</a></div></li>
+                        <li><div class="linka"><a href="">Quem somos</a></div></li>
+                        <li><div class="linka"><a href="">Contato</a></div></li>
                     </ul>
                 </div>
             </div>
@@ -62,7 +63,7 @@
     <div class="footer">
         <div class="container">
             <div class="esquerda_footer">
-                <img src="../img/download.png" class="logo_navbar">
+                <img src="../img/download.png" class="logo">
             </div>
             <div class="direita_footer">
                 <div class="contatos">
