--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style_index.css">
+    <link rel="stylesheet" href="./css/style_index.css">
     <link href='https://fonts.googleapis.com/css?family=Lalezar' rel='stylesheet'>
 </head>
 <body>
     <div class="header">
         <div class="container">
             <div class="esquerda_header">
-                <img src="../img/download.png" class="logo">
+                <img src="./img/download.png" class="logo">
             </div>
             <div class="direita_header">
                 <div class="conta">
-                    <img src="../img/place_holder.png" class="imagem_usuario">
+                    <img src="./img/place_holder.png" class="imagem_usuario">
                     <span id="nome_usuario" class="nome_usuario"> Teste</span>
                 </div>
                 <hr>
@@ -63,7 +63,7 @@
     <div class="footer">
         <div class="container">
             <div class="esquerda_footer">
-                <img src="../img/download.png" class="logo">
+                <img src="  ./img/download.png" class="logo">
             </div>
             <div class="direita_footer">
                 <div class="contatos">
