--- a/web/public/cadastro.html
+++ b/web/public/cadastro.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cadastro</title>
 </head>
 <body>
-    
+    Nome: <input type="text" id="nomeCadastro">
+    <br>
+    Senha: <input type="text" id="senhaCadastro">
+    <br>
+    email: <input type="text" id="emailCadastro">
+
+    <button onclick="cadastrar()">Cadastrar</button>
 </body>
 </html>
+<script>
+    function cadastrar(){
+        var nome = nomeCadastro.value;
+        var email = emailCadastro.value;
+        var senha = senhaCadastro.value;
+
+        alert("Funcionando")
+
+
+        fetch("/user/cadastrar", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringfy({
+                nome_html: nome,
+                email_html: email,
+                senha_html: senha
+            })
+        }).then(function (resposta) {
+            
+            if (resposta.ok){
+                alert("Cadastrado com sucesso! Redirecionando para tela de login...");
+                setTimeout(() => {window.location = "./login.html"; }, 1000);
+
+            }else{
+                throw("Houve um erro ao tentar cadastrar!");
+            }
+        }).catch(function (resposta){
+            console.log(`#ERRO AO CADASTRAR: ${resposta}`);
+        });
+        return false;
+    }
+</script>
