--- a/web/public/cadastro.html
+++ b/web/public/cadastro.html
@@ -21,15 +21,12 @@
         var email = emailCadastro.value;
         var senha = senhaCadastro.value;
 
-        alert("Funcionando")
-
-
         fetch("/user/cadastrar", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
             },
-            body: JSON.stringfy({
+            body: JSON.stringify({
                 nome_html: nome,
                 email_html: email,
                 senha_html: senha
