--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,12 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style_index.css">
     <link href='https://fonts.googleapis.com/css?family=Lalezar' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=IBM Plex Sans Hebrew' rel='stylesheet'>
 </head>
 <body>
     <div class="header">
         <div class="container">
             <div class="esquerda_header">
-                <img src="./img/download.png" class="logo">
+                <img src="./img/icon.png" class="logo">
             </div>
             <div class="direita_header">
                 <div class="conta">
@@ -31,46 +32,131 @@
         </div>
     </div>
     <div class="banner1">
-        <div class="container"></div>
+        <div class="container">
+            <div class="banner1_infocard">
+                <div class="banner1_textos">
+                    <h1>Monitore suas transações de Pix de maneira ágil e objetiva!</h1>
+                    <span>Obtenha uma dashboard que lhe permita analisar todo seu sistema!</span>
+                </div>
+                <div class="banner1_img">
+                    <div>
+                        <img src="./img/icon pix.png">
+                    </div>
+                    <div>
+                        <img src="./img/icon agil.png">
+                    </div>
+                    <div>
+                        <img src="./img/icon analise.png">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="produtos">
-        <div class="produtos_superiores">
-            <div class="bolinha">teste</div>
-            <div class="bolinha">teste</div>
-            <div class="bolinha">teste</div>
+        <h1>Benefícios do nosso software</h1>
+        <span>A Eyes on Server está 100% preparada para os seus negócios:</span>
+        <div class="beneficios_superiores">
+            <div class="beneficios">
+                <div class="titulo_ben">
+                    <h1>Processamento</h1>
+                </div>
+                <img src="./img/icon_proc.png">
+                <br>
+                <span>Monitore o sistema durante as transações via Pix.</span>
+            </div>
+            <div class="beneficios">
+                <div class="titulo_ben">
+                    <h1>Funcionamento</h1>
+                </div>
+                <img src="./img/icon_fun.png">
+                <br>
+                <span>Análise os componentes que precisam de reparo.</span>
+            </div>
         </div>
-        <div class="produtos_inferiores">
-            <div class="bolinha">teste</div>
-            <div class="bolinha">teste</div>
-            <div class="bolinha">teste</div>
+        <div class="beneficios_inferiores">
+            <div class="beneficios">
+                <div class="titulo_ben">
+                    <h1>Proeficiência</h1>
+                </div>
+                <img src="./img/icon_pro.png">
+                <br>
+                <span>Aumente sua performance e diminua sua parada de serviço.</span>
+            </div>
+            <div class="beneficios">
+                <div class="titulo_ben">
+                    <h1>Suporte</h1>
+                </div>
+                <img src="./img/icon_suport.png">
+                <br>
+                <span>Disponibilizamos um suporte 24/7 para qualquer eventual incidente.</span>
+            </div>
         </div>
     </div>
     <div class="banner2">
-        <div class="container"></div>
+        <div class="container">
+            <div class="banner2_infocard">
+                <h1>SOLUÇÃO</h1>
+                <span>Com o nosso software, você consegue monitorar o seu servidor durante as transações de Pix
+                     e assim perceber como está o seu processamento, 
+                    evitando possíveis downtime, e podendo evitar a perda de componentes do seu servidor.</span>
+                <button class="banner2_1">ENTRE EM CONTATO</button>
+                <button class="banner2_2">LIVE PREVIEW</button>
+            </div>
+        </div>
     </div>
     <div class="sobre_nos">
-        <div class="pessoas_superiores">
-            <div class="bolinha">teste</div>
-            <div class="bolinha">teste</div>
-            <div class="bolinha">teste</div>
-        </div>
-        <div class="pessoas_inferiores">
-            <div class="bolinha">teste</div>
-            <div class="bolinha">teste</div>
-            <div class="bolinha">teste</div>
+        <div class="container">
+            <h1 class="sobre_nos_tit">SOBRE NÓS</h1>
+            <div class="sobre_infocard">
+                <div class="sobre_valores">
+                    <div class="valores">
+                        <img src="./img/icon_trans.png">
+                        <h1>Transparência</h1>
+                        <span>A Eyes on Server é 100% transparente em seus processos, 
+                            onde cliente, em busca de manter uma relação longuiqua com os mesmos.
+                        </span>
+                    </div>
+                    <div class="valores">
+                        <img src="./img/icon_confi.png">
+                        <h1>Confiança</h1>
+                        <span>
+                            A Eyes on Server entrega um serviço empresarial e confiável aos seus clientes.
+                        </span>
+                    </div>
+                    <div class="valores">
+                        <img src="./img/icon_equip.png">
+                        <h1>Equipe</h1>
+                        <span>
+                            Com uma composta por profissionais capacitados e compromissados para entregar o melhor sempre
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="sobre_buttons">
+                <button class="sobre_buttons_1">
+                    Torne-se um cliente!
+                </button>
+                <button class="sobre_buttons_2">
+                    SAIBA MAIS!
+                </button>
+            </div>
         </div>
     </div>
     <div class="footer">
         <div class="container">
             <div class="esquerda_footer">
-                <img src="./img/download.png" class="logo">
+                <img src="./img/icon_no_bg.png" class="logo">
             </div>
             <div class="direita_footer">
                 <div class="contatos">
-                    <div class="bolinha">teste</div>
-                    <div class="bolinha">teste</div>
-                    <div class="bolinha">teste</div>
+                    <img src="./img/git.png">
+                    <img src="./img/linkedin.png">
+                    <img src="./img/num_sei.png">
                 </div>
+                <span>
+                    © 2023 - Eyes On Server. 
+                    Todos os direitos reservados.
+                </span>
             </div>
         </div>
     </div>
