Adicionando new features para o index

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eyes On Server</title>
+    <link rel="shortcut icon" href="./img/icon_no_bg.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style_index.css">
     <link href='https://fonts.googleapis.com/css?family=Lalezar' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=IBM Plex Sans Hebrew' rel='stylesheet'>
@@ -16,8 +17,8 @@
             </div>
             <div class="direita_header">
                 <div class="conta">
-                    <img src="./img/place_holder.png" class="imagem_usuario">
-                    <span id="nome_usuario" class="nome_usuario"> Teste</span>
+                    <img src="./img/user_icon.png" class="imagem_usuario">
+                    <a href="./login.html" id="login_cliente">Login do cliente</a>
                 </div>
                 <hr>
                 <div class="links_navbar">
@@ -149,8 +150,8 @@
             </div>
             <div class="direita_footer">
                 <div class="contatos">
-                    <img src="./img/git.png">
-                    <img src="./img/linkedin.png">
+                    <img src="./img/github_icon.png">
+                    <img src="./img/linkedin_icon.png">
                     <img src="./img/num_sei.png">
                 </div>
                 <span>
