Adicionando footer e header para os cadastros

--- a/web/public/cadastro.html
+++ b/web/public/cadastro.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style_cadastro.css">
+    <link rel="stylesheet" href="css/style_footer_header.css">
+    <link href='https://fonts.googleapis.com/css?family=Lalezar' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=IBM Plex Sans Hebrew' rel='stylesheet'>
     <title>Cadastro</title>
 </head>
 <body>
+    <script src="js/header.js"></script>
     <div class="div_central">
         <div class="div_gerenciamento">
             <span>Gerenciamento</span>
@@ -39,6 +43,7 @@
             <button onclick="cadastrar()" class="btn_cadastrar">Cadastrar</button>
         </div>
     </div>
+    <script src="js/footer.js"></script>
 </body>
 </html>
 <script>
