--- a/web/public/cadastroEmpresa.html
+++ b/web/public/cadastroEmpresa.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../public/css/style_cadastroEmpresa.css">
+    <link rel="stylesheet" href="css/style_footer_header.css">
+    <link href='https://fonts.googleapis.com/css?family=Lalezar' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=IBM Plex Sans Hebrew' rel='stylesheet'>
     <title>Document</title>
 </head>
 <body>
+    <script src="js/header.js"></script>
     <div class="div_central">
         <div class="div_cadastro">
             <h1>Cadastro Empresa</h1>
@@ -16,6 +20,7 @@
             <button onclick="cadastrarEmpresa()" class="btn_cadastrar">Cadastrar</button>
         </div>
     </div>
+    <script src="js/footer.js"></script>
 </body>
 </html>
 
