Back do Desenvolvedor
Desenvolvimento das funções de cadastro e listar e preparo de ambiente para demais funções

--- a/web/public/cadastroDesenvolvedor.html
+++ b/web/public/cadastroDesenvolvedor.html
@@ -41,7 +41,7 @@
             },
             body: JSON.stringify({
                 nome_html: nome,
-                email_hmtl: email,
+                email_html: email,
                 senha_html: senha
             })
         }).then(function (resposta) {
