--- a/web/public/login.html
+++ b/web/public/login.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/style_login.css">
-        <link rel="stylesheet" href="css/style_footer_header.css">
+        <div id="Modo"><link rel="stylesheet" href="./css/style_mobile_login.css"> <link rel="stylesheet" href="./css/style_mobile_footer_header.css"></div>
         <link href='https://fonts.googleapis.com/css?family=Lalezar' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=IBM Plex Sans Hebrew' rel='stylesheet'>
         <title>Eye on Server | Login</title>
@@ -76,4 +75,12 @@
         return false;
     }
 
+</script>
+
+<script>
+    var nav_agent = (navigator.userAgent).toUpperCase()
+
+    if(nav_agent.indexOf("ANDROID") == -1 && nav_agent.indexOf("IPHONE") == -1 && nav_agent.indexOf("IPAD") == -1){
+        Modo.innerHTML = '<link rel="stylesheet" href="./css/style_login.css"><link rel="stylesheet" href="./css/style_footer_header.css">'
+    }
 </script>
